docs/egress-gateway-asm-manifests/gateway-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - edition.cnn.com
    # tls:
    #   mode: PASSTHROUGH
    #   cipherSuites:
    #     - ECDHE-ECDSA-AES256-GCM-SHA384
    #     - ECDHE-ECDSA-AES128-GCM-SHA256
    #     - ECDHE-RSA-AES256-GCM-SHA384
    #     - ECDHE-RSA-AES128-GCM-SHA256
    #     - ECDHE-ECDSA-AES256-CBC-SHA384
    #     - ECDHE-ECDSA-AES128-CBC-SHA256
    #     - ECDHE-RSA-AES256-CBC-SHA384
    #     - ECDHE-RSA-AES128-CBC-SHA256
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-cnn
spec:
  host: istio-egressgateway.default.svc.cluster.local
  subsets:
  - name: cnn
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
spec:
  hosts:
  - edition.cnn.com
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.default.svc.cluster.local
        subset: cnn
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: edition.cnn.com
        port:
          number: 80
      weight: 100
